fix(calendar): improve poster visibility and responsive scaling

--- a/src/routes/Calendar/Table/Cell/Cell.less
+++ b/src/routes/Calendar/Table/Cell/Cell.less
@@ -27,12 +27,11 @@
     }
 
     .heading {
-        flex: none;
         position: relative;
-        height: 3rem;
+    height: 100%;
         display: flex;
-        align-items: center;
-        padding: 0 1rem;
+    align-items: start;
+    padding: 0;
 
         .day {
             flex: none;
@@ -50,7 +49,6 @@
     }
 
     .items {
-        flex: 0 1 10rem;
         position: relative;
         display: flex;
         flex-direction: row;
@@ -65,6 +63,9 @@
             height: 100%;
             aspect-ratio: 2 / 3;
             border-radius: var(--border-radius);
+      aspect-ratio: 2 / 3;
+      height: 100%;
+      max-height: clamp(8rem, 25vh, 14rem);
 
             .icon {
                 flex: none;
@@ -150,28 +151,33 @@
     }
 }
 
-@media only screen and (max-height: @xxsmall) and (orientation: landscape) {
+@media only screen and (max-height: @xsmall) and (max-width: @xsmall) {
     .cell {
-        flex-direction: row;
-        align-items: center;
+    gap: 0;
+
+    .heading {
+      .day {
+        font-size: 0.875rem;
+      }
+    }
 
         .items {
+      padding: 0.25rem;
             display: none;
-        }
 
-        .more {
-            display: flex;
+      .item {
+        pointer-events: none;
+        border-radius: calc(var(--border-radius) / 2);
+      }
         }
     }
 }
 
-@media only screen and (max-height: @xsmall) and (max-width: @xsmall) {
+@media only screen and (max-height: @small) and (max-width: @small) {
     .cell {
         gap: 0;
 
         .heading {
-            height: 2rem;
-
             .day {
                 font-size: 0.875rem;
             }
@@ -179,6 +185,8 @@
 
         .items {
             padding: 0.25rem;
+      width: 100%;
+      height: 100%;
 
             .item {
                 pointer-events: none;
